<resources>
    <string name="app_name">Fragment App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_profile">"You're on Profile Activity"</string>
    <string name="this_category">This is Category Fragment</string>
    <string name="category_lifestyle">To Lifestyle Category</string>
    <string name="category_name">Category Name</string>
    <string name="category_description">Category Description</string>
    <string name="to_profile">To Profile Activity Page</string>
    <string name="show_dialog">Show dialog</string>
    <string name="hello_home_fragment">"Hi, it's home fragment!"</string>
    <string name="to_category">To Fragment Category</string>
    <string name="question_coach">What is the most influential Progressive Rock Band in the history?</string>
    <string name="pink_floyd">Pink Floyd</string>
    <string name="one_direction">One Direction</string>
    <string name="maroon_five">Maroon 5</string>
    <string name="bon_jovi">Bon Jovi</string>
    <string name="choose">Choose</string>
    <string name="close">Close</string>
</resources>