<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".OptionDialogFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp"
        android:text="@string/question_coach" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rg_options"
        android:orientation="vertical">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rb_one"
            android:layout_marginBottom="8dp"
            android:text="@string/one_direction"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rb_five"
            android:layout_marginBottom="8dp"
            android:text="@string/maroon_five"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rb_pink"
            android:layout_marginBottom="8dp"
            android:text="@string/pink_floyd"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rb_bon"
            android:layout_marginBottom="8dp"
            android:text="@string/bon_jovi"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_close"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/close"
            android:layout_marginEnd="4dp"
            android:layout_weight="0.5"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_choose"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/choose"
            android:layout_marginStart="4dp"
            android:layout_weight="0.5"/>

    </LinearLayout>

</LinearLayout>